提交CPU运行程序